arcbd.org #001 | Google Web Fonts
Added essential Google Web Fonts

--- a/assets/sass/partials/_global.scss
+++ b/assets/sass/partials/_global.scss
@@ -1,12 +1,21 @@
 
 // Font Family
-@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900';
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700|Roboto+Slab:400,700|Roboto:300,400,400i,500,700');
 
 // Variables
-$font-family: 'Roboto', sans-serif;
+$heading-ff: 'Roboto Slab', serif;
+$body-primary-ff: 'Roboto', sans-serif;
+$body-secondary-ff: 'Lato', sans-serif;
 $transition: all 0.3s ease-in-out;
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $heading-ff;
+  font-weight: 700;
+  line-height: 1.4;
+}
+
 body {
-	font-family: $font-family;
+	  font-family: $body-primary-ff;
     font-size: 14px;
     font-weight: 400;
     -webkit-box-sizing: border-box;
