--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900';
+@import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700|Roboto+Slab:400,700|Roboto:300,400,400i,500,700");
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Roboto Slab", serif;
+  font-weight: 700;
+  line-height: 1.4;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
