arcbd.org #004 | Hero Section Added
Added the hero section

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,4 +1,7 @@
 
 // Global Styles
 @import 'partials/global';
+// Header Styles
 @import 'partials/header';
+// Hero area Styles
+@import 'partials/hero';
