--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: subpixel-antialiased;
-  color: #212121;
+  color: #2a2a2a;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
@@ -383,7 +383,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   letter-spacing: 0.04rem;
   line-height: 30px;
   text-transform: capitalize !important;
-  padding: 10px 35px;
+  padding: 12px 30px;
   text-transform: capitalize;
   -webkit-transition: all 0.4s ease;
   -o-transition: all 0.4s ease;
@@ -402,4 +402,31 @@ a.back-to-top:hover, a.back-to-top:focus {
   line-height: 80px;
   text-align: center;
   width: 60px;
+}
+
+.hero-section {
+  background-color: #e4e6e9;
+}
+
+.display-table {
+  display: table;
+  min-height: 600px;
+  width: 100%;
+}
+
+.display-table-cell {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.hero-text h2 {
+  font-size: 30px;
+  letter-spacing: 0.1rem;
+}
+
+.hero-text p {
+  font-size: 18px;
+  letter-spacing: 0.1rem;
+  line-height: 1.5;
+  margin: 30px 0;
 }
