--- a/assets/sass/partials/_global.scss
+++ b/assets/sass/partials/_global.scss
@@ -24,7 +24,7 @@ body {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     -webkit-font-smoothing: subpixel-antialiased;
-    color: #212121;
+    color: #2a2a2a;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
