arcbd.org #005 | About section added
Added about section

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,7 +1,12 @@
 
 // Global Styles
 @import 'partials/global';
+
 // Header Styles
 @import 'partials/header';
+
 // Hero area Styles
 @import 'partials/hero';
+
+// About area Styles
+@import 'partials/about';
