--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 }
 
 .section-padding {
-  padding: 100px 0;
+  padding: 80px 0;
 }
 
 .mt-10 {
@@ -429,4 +429,26 @@ a.back-to-top:hover, a.back-to-top:focus {
   letter-spacing: 0.1rem;
   line-height: 1.5;
   margin: 30px 0;
+}
+
+.single-about-widget h3 {
+  font-size: 18px;
+  margin-top: 5px;
+  text-transform: capitalize;
+  letter-spacing: 0.1rem;
+}
+
+.single-about-widget h2 {
+  font-size: 28px;
+  letter-spacing: 0.1rem;
+  text-transform: capitalize;
+}
+
+.single-about-widget p {
+  color: #727480;
+  font-family: "Lato", sans-serif;
+  font-size: 20px;
+  font-style: italic;
+  line-height: 1.4;
+  margin: 25px 0;
 }
