--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,23 @@ a a:focus {
 }
 
 .section-dark {
-  background-color: #f9f9f9;
+  background-color: #e0e0e2;
+}
+
+.section-title h2 {
+  font-size: 30px;
+  text-transform: capitalize;
+  position: relative;
+}
+
+.section-title h2::after {
+  position: absolute;
+  content: "";
+  bottom: -10px;
+  left: 0;
+  background-image: url(../images/title-bg.png);
+  width: 75px;
+  height: 6px;
 }
 
 /* ScrollToTop */
@@ -451,4 +467,29 @@ a.back-to-top:hover, a.back-to-top:focus {
   font-style: italic;
   line-height: 1.4;
   margin: 25px 0;
+}
+
+.single-cn-widget img {
+  width: 100%;
+}
+
+.single-cn-widget:hover div {
+  background-color: #fa9f42;
+}
+
+.single-cn-widget div {
+  display: block;
+  background-color: #187e47;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.single-cn-widget div h2 {
+  margin: 0;
+  text-align: center;
+  font-size: 18px;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 15px 0;
 }
