--- a/assets/sass/partials/_global.scss
+++ b/assets/sass/partials/_global.scss
@@ -92,7 +92,7 @@ a{
 .section-title {
   h2 {
     font-size: 30px;
-    text-transform: capitalize;
+    text-transform: uppercase;
     position: relative;
     &::after {
       position: absolute;
