--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -11,5 +11,8 @@
 // About area Styles
 @import 'partials/about';
 
+// service area Styles
+@import 'partials/service';
+
 // Conceling area Styles
 @import 'partials/counceling';
