--- a/assets/sass/partials/_hero.scss
+++ b/assets/sass/partials/_hero.scss
@@ -2,6 +2,21 @@
 .hero-section {
     background-color: #e4e6e9;
 }
+.single-slider {
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    width: 100%;
+    &::before {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        content: "";
+        top: 0;
+        left: 0;
+        background-color: rgba( 0,0,0,0.5 )
+    }
+}
 .display-table {
     display: table;
     min-height: 600px;
@@ -14,6 +29,7 @@
 
 // Hero Text
 .hero-text {
+    color: #fff;
     h2 {
         font-size: 30px;
         letter-spacing: 0.1rem;
