--- a/assets/sass/partials/_hero.scss
+++ b/assets/sass/partials/_hero.scss
@@ -14,7 +14,7 @@
         content: "";
         top: 0;
         left: 0;
-        background-color: rgba( 0,0,0,0.5 )
+        background-color: rgba(39, 174, 96, 0.8);
     }
 }
 .display-table {
