--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -20,6 +20,9 @@
 // Skill area Styles
 @import 'partials/skill';
 
+// Contact area Styles
+@import 'partials/contact';
+
 // recent post area Styles
 @import 'partials/recent-post';
 
